[gd_scene load_steps=9 format=2]

[ext_resource path="res://MainMenuHard.gd" type="Script" id=1]
[ext_resource path="res://MainMenu/OnOffStart.png" type="Texture" id=2]
[ext_resource path="res://MainMenu/OnOffDiffEasy.png" type="Texture" id=3]
[ext_resource path="res://MainMenu/MenuLights.png" type="Texture" id=4]
[ext_resource path="res://MainMenu/MenuButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://MainMenu/Title.tres" type="DynamicFont" id=6]
[ext_resource path="res://MainMenu/Label.tscn" type="PackedScene" id=8]
[ext_resource path="res://UI/ScoreDisplay.tscn" type="PackedScene" id=11]

[node name="MainMenuEasy" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 970.469, 502.186 )
texture = ExtResource( 4 )

[node name="StartButton" parent="." instance=ExtResource( 5 )]
position = Vector2( -359.617, 226.531 )

[node name="Sprite" parent="StartButton/Button" index="0"]
position = Vector2( 955.193, 275.226 )
texture = ExtResource( 2 )

[node name="DifficultyButton" parent="." instance=ExtResource( 5 )]
position = Vector2( 15.874, 226.998 )

[node name="Sprite" parent="DifficultyButton/Button" index="0"]
position = Vector2( 957.438, 276.348 )
texture = ExtResource( 3 )

[node name="ExitButton" parent="." instance=ExtResource( 5 )]
position = Vector2( 391, 227 )

[node name="Sprite" parent="ExitButton/Button" index="0"]
position = Vector2( 957.438, 277.471 )

[node name="Designers" parent="." instance=ExtResource( 8 )]

[node name="Title" parent="." instance=ExtResource( 8 )]
margin_left = 500.0
margin_top = 235.0
margin_right = 1450.0
margin_bottom = 295.998
custom_fonts/font = ExtResource( 6 )
text = "Terrific Lights"
align = 1

[node name="ScoreDisplay" parent="." instance=ExtResource( 11 )]
margin_left = 900.0
margin_top = 297.0
margin_right = 1113.0
margin_bottom = 343.0

[editable path="StartButton"]

[editable path="DifficultyButton"]

[editable path="ExitButton"]
